# iesopt

./: .buildinfo  .codespellrc  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tag_release.sh
.doctrees/: environment.pickle  getting_started.doctree  index.doctree
.doctrees/__intersphinx_cache__/: pandas_objects.inv
.doctrees/notebooks/: custom_results_1.doctree  custom_results_2.doctree  example_52.doctree  example_53.doctree  example_54.doctree  example_55.doctree  first_model.doctree  mga_basic.doctree
.doctrees/pages/: index.doctree
.doctrees/pages/dev/: core.doctree  general.doctree  updating.doctree
.doctrees/pages/manual/julia/: assets.doctree  index.doctree  resultsduckdb.doctree  resultsjld2.doctree  utilities.doctree
.doctrees/pages/manual/python/: configuration.doctree
.doctrees/pages/manual/yaml/: core_components.doctree  index.doctree  top_level.doctree
.doctrees/pages/reference/python/: index.doctree  model.doctree  results.doctree  util.doctree
.doctrees/pages/reference/yaml/: index.doctree
.doctrees/pages/references/: projects.doctree  publications.doctree
.doctrees/pages/tutorials/: addons.doctree  templates_1.doctree  templates_2.doctree
.doctrees/pages/tutorials/templates/: getter_setter.doctree
.doctrees/pages/user_guides/: best_practice.doctree  index.doctree  linking_components.doctree  solvers.doctree  toc_general.doctree  toc_qna.doctree
.doctrees/pages/user_guides/general/: best_practice.doctree  common_errors.doctree  global_parameters.doctree  kwargs_config.doctree  linking_components.doctree  monte_carlo.doctree  solvers.doctree
.doctrees/pages/user_guides/qna/: cop_interpolation.doctree  dynamic_marginal_costs.doctree  passive_charging.doctree  profiles_sign.doctree  snapshot_duration.doctree
.doctrees/tocs/: __toc.doctree  _tutorials.doctree  examples.doctree  tutorials_extracting_results.doctree  tutorials_templates.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/install-ssl-certificates/: action.yml
.github/actions/set-versions/: action.yml
.github/workflows/: documentation.yml  pypi_publish.yml  pytest.yml
_modules/: iesopt.html  index.html
_modules/iesopt/: iesopt.html  model.html  results.html
_modules/iesopt/julia/: util.html
_sources/: index.md.txt
_sources/notebooks/: custom_results_2.ipynb.txt  example_52.ipynb.txt  example_53.ipynb.txt  example_54.ipynb.txt  example_55.ipynb.txt  first_model.ipynb.txt  mga_basic.ipynb.txt
_sources/pages/dev/: general.md.txt
_sources/pages/manual/julia/: assets.md.txt  index.md.txt  resultsduckdb.md.txt  resultsjld2.md.txt  utilities.md.txt
_sources/pages/manual/python/: index.md.txt  jump.md.txt  results.md.txt  util.md.txt
_sources/pages/manual/yaml/: core_components.md.txt  index.md.txt  top_level.md.txt
_sources/pages/reference/yaml/: index.md.txt
_sources/pages/references/: projects.md.txt  publications.md.txt
_sources/pages/tutorials/: addons.md.txt  templates_1.md.txt
_sources/pages/tutorials/templates/: getter_setter.md.txt
_sources/pages/user_guides/: index.md.txt  toc_general.md.txt
_sources/pages/user_guides/general/: best_practice.md.txt  global_parameters.md.txt  kwargs_config.md.txt  linking_components.md.txt  monte_carlo.md.txt  solvers.md.txt
_sources/pages/user_guides/qna/: cop_interpolation.md.txt  passive_charging.md.txt  snapshot_duration.md.txt
_sources/tocs/: _tutorials.md.txt  examples.md.txt  tutorials_extracting_results.md.txt  tutorials_templates.md.txt
_static/: custom.css  documentation_options.js
docs/: conf.py  getting_started.md  index.md
docs/_extensions/: julia_domain.py
docs/dynamic/: core.py  create.py  julia.py
docs/notebooks/: .gitignore  custom_results.ipynb  custom_results_1.ipynb  custom_results_2.ipynb  first_model.ipynb  getting_started.ipynb  pyproject.toml  ruff.toml
docs/pages/: index.md  util.md
docs/pages/dev/: core.md  docs.md  general.md  testing.md  updating.md
docs/pages/manual/julia/: .gitignore  (+2 more)
docs/pages/references/: projects.md  publications.md
docs/pages/tutorials/: templates_1.md
docs/pages/user_guides/: best_practice.md  index.md  linking_components.md  solvers.md  toc_general.md  toc_qna.md
docs/tocs/: __toc.md
notebooks/: custom_results_1.html  custom_results_2.html  example_52.html  example_53.html  example_54.html  example_55.html  first_model.html  mga_basic.html
pages/: index.html
pages/dev/: core.html  general.html  updating.html
pages/manual/julia/: assets.html  index.html  resultsduckdb.html  resultsjld2.html  utilities.html
pages/manual/python/: configuration.html  index.html  jump.html  model.html  results.html  util.html
pages/manual/yaml/: core_components.html  index.html  top_level.html
pages/reference/python/: index.html  model.html  results.html  util.html
pages/reference/yaml/: index.html
pages/references/: projects.html  publications.html
pages/tutorials/: addons.html  templates_1.html  templates_2.html
pages/tutorials/templates/: getter_setter.html
pages/user_guides/: best_practice.html  index.html  linking_components.html  solvers.html  toc_general.html  toc_qna.html
pages/user_guides/general/: best_practice.html  common_errors.html  global_parameters.html  kwargs_config.html  linking_components.html  monte_carlo.html  solvers.html
pages/user_guides/qna/: cop_interpolation.html  dynamic_marginal_costs.html  passive_charging.html  profiles_sign.html  snapshot_duration.html
src/iesopt/: __init__.py  config.py  iesopt.py  juliapkg.json  model.py  results.py
src/iesopt/julia/: __init__.py  general.py  setup.py  util.py
src/iesopt/util/: __init__.py  constants.py  logging.py  util.py
tests/: test_examples.py  test_files.py  test_iesoptlib.py  test_julia_consistency.py  test_python_julia_conversion.py  test_results.py
tocs/: __toc.html  _tutorials.html  examples.html  tutorials_extracting_results.html  tutorials_templates.html
(+35 files in other folders)
