[project]
name = "iesopt"
version = "2.4.3.dev0"
description = "IESopt -- an Integrated Energy System Optimization framework."
keywords = ["integrated energy systems", "optimization", "energy model", "modelling"]
authors = [
    {name="Stefan Strömer", email="8915976+sstroemer@users.noreply.github.com"}
]
maintainers = [
    {name="Stefan Strömer", email="8915976+sstroemer@users.noreply.github.com"}
]
readme = "README.md"
license = {text="MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "pathlib>=1.0.0",
    "juliacall>=0.9.20",
    "pandas>=2.0.0",
    "juliapkg>=0.1.13",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.1"
]

[project.urls]
Homepage = "https://github.com/ait-energy/iesopt"
Documentation = "https://ait-energy.github.io/iesopt"
Repository = "https://github.com/ait-energy/iesopt"
Issues = "https://github.com/ait-energy/iesopt/issues"
Changelog = "https://github.com/ait-energy/iesopt/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.4.7",
    "codespell>=2.3.0",
    "pre-commit>=3.8.0"
]

doc = [
    "myst-parser>=3.0.1",
    "sphinx>=7.3.7",
    "sphinxawesome-theme>=5.2.0",
    "sphinx-togglebutton>=0.3.2",
    "ipywidgets>=8.1.3",
    "myst-nb>1.1.0",
    "jupytext>=1.16.4"
]

test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-ruff>=0.3.2"
]

[tool.uv]
default-groups = ["dev", "test", "doc"]
# package = true

[tool.ruff]
line-length = 120
extend-exclude = ["*.jl"]
target-version = "py311"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ruff",
    "--ruff-format",
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--cov=iesopt",
]
