[project]
name = "iesopt"
version = "2.10.0"
description = "IESopt -- an Integrated Energy System Optimization framework."
keywords = ["integrated energy systems", "optimization", "energy model", "modelling"]
authors = [
    {name="Stefan Strömer", email="8915976+sstroemer@users.noreply.github.com"}
]
maintainers = [
    {name="Stefan Strömer", email="8915976+sstroemer@users.noreply.github.com"}
]
readme = "README.md"
license = {text="MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "pathlib >= 1.0.0",
    "pandas >= 2.0.0",
    "pydantic >= 2.7.4",
    "python-dotenv >= 1.0.1",
    # the Julia dependencies are intentionally pinned!
    "juliacall == 0.9.28",
    "juliapkg == 0.1.19",
]

[project.urls]
Homepage = "https://github.com/ait-energy/iesopt"
Documentation = "https://ait-energy.github.io/iesopt"
Repository = "https://github.com/ait-energy/iesopt"
Issues = "https://github.com/ait-energy/iesopt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # code quality
    "pre-commit >= 3.8.0",

    # test
    "pytest >= 8.2.2",
    "pytest-cov >= 5.0.0",
    "pytest-ruff >= 0.3.2",
    "tox>=4.24.1",
    "tox-uv>=1.20.2",

    # doc
    "myst-parser >= 3.0.1",
    "sphinx >= 7.3.7",
    "sphinxawesome-theme >= 5.2.0",
    "sphinx-togglebutton >= 0.3.2",
    "ipywidgets >= 8.1.3",
    "myst-nb >= 1.1.0",
    "jupytext >= 1.16.4",
]

[tool.ruff]
line-length = 120
extend-exclude = ["*.jl"]
target-version = "py311"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ruff",
    "--ruff-format",
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--cov=iesopt",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
package = "wheel"
commands = [["pytest"]]
